--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -21,7 +21,7 @@
 @import "sections/header";
 @import "sections/footer";
 /* Pages */
+@import "pages/vpn";
 @import "pages/home";
-@import "pages/main";
 @import "pages/catalog";
 @import "pages/cart";
