--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -13,13 +13,19 @@
         <div class="header__block">
             <div class="header__logo">
 
-                <button class="hamburger hamburger--squeeze js-hamburger header__logo_menu" type="button">
+                <!-- <button class="hamburger hamburger--squeeze js-hamburger header__logo_menu" type="button">
                     <span class="hamburger-box">
                         <span class="hamburger-inner"></span>
                     </span>
+                </button> -->
+
+                <button class="header__logo_menu">
+                    <img src="assets/images/home-new/icons/menu.svg" alt="">
                 </button>
 
-                <a class="header__logo_link" href="#">GameBis</a>
+                <a class="header__logo_link" href="#">
+                    <img src="assets/images/icons/logo.svg" alt="">
+                </a>
             </div>
             <div class="header__menu js-hamburger-menu">
                 <div class="header__menu_block">
@@ -120,7 +126,7 @@
                     </a>
                 </div>
                 <a href="#" class="header__actions_admin">
-                    <img src="assets/images/home/card-image.png" alt="">
+                    <img src="assets/images/home-new/admin.png" alt="">
                 </a>
             </div>
         </div>
