--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -16,6 +16,10 @@
     z-index: 3;
 }
 
+.text-orange {
+    color: $orange;
+}
+
 .section {
 
     &__title {
@@ -40,7 +44,6 @@
         }
     }
 }
-
 
 .hide {
     display: none;
