--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,6 +1,105 @@
 .home-main-slider {
     padding-top: 40px;
     padding-bottom: 40px;
+
+    &__block {
+        display: flex;
+        gap: 20px;
+        margin-top: 25px;
+    }
+
+    &__card {
+        border-radius: 20px;
+        border: 1px solid transparent;
+        background: linear-gradient(91deg, #2B2823 0%, #27251F 63.74%, #2C2A27 101.17%);
+        padding: 25px;
+        transition: 200ms ease;
+
+        &_name {
+            font-size: 20px;
+            text-transform: uppercase;
+            font-weight: 700;
+            color: white;
+            line-height: 1;
+        }
+
+        &_title {
+            font-size: 46px;
+            font-weight: 700;
+            -webkit-text-stroke-width: 0.5px;
+            -moz-text-stroke-width: 0.5px;
+            -webkit-text-stroke-color: white;
+            -moz-text-stroke-color: white;
+            color: transparent;
+            line-height: 1.1;
+            margin-bottom: 8px;
+            font-family: $font-roboto;
+            transition: 300ms ease;
+        }
+
+        &_btn {
+            border-radius: 24.5px;
+            border: 1px solid #55473E;
+            background: #1A1916;
+            box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
+            text-align: center;
+            font-size: 16px;
+            color: $text-dark;
+            font-weight: 700;
+            line-height: 1;
+            padding: 13px;
+        }
+
+        &:hover {
+            border: 1px solid $orange;
+            box-shadow: 0px 4px 70.6px 0px #FF6C3D30;
+
+            .home-main-slider__card_title {
+                color: $orange;
+                -webkit-text-stroke-width: 0px;
+                -moz-text-stroke-width: 0px;
+            }
+        }
+    }
+
+    &__steam {
+        display: flex;
+
+        &_img {
+            width: 100%;
+            min-width: 170px;
+            height: 100%;
+            display: flex;
+            position: relative;
+
+            &_item {
+                width: 100%;
+                min-width: 190px;
+                height: auto;
+                position: absolute;
+                left: -40px;
+                top: -20px;
+                filter: grayscale(0.6);
+                transition: 200ms ease;
+            }
+        }
+
+        &_content {
+            width: 100%;
+            max-width: 150px;
+            text-align: center;
+        }
+
+        &:hover {
+            .home-main-slider__steam_img_item {
+                filter: grayscale(0);
+            }
+        }
+    }
+
+    &__gamegift {}
+
+    &__pays {}
 }
 
 .hot-slider {
