--- a/src/assets/scss/common/_buttons.scss
+++ b/src/assets/scss/common/_buttons.scss
@@ -1,8 +1,9 @@
 .btn-arrow {
     font-size: 14px;
     color: white;
-    border: 1px solid #847F7D;
+    border: 1px solid transparent;
     border-radius: 4px;
+    background: #282725;
     display: flex;
     align-items: center;
     justify-content: center;
