--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,6 +1,6 @@
 .home-main-slider {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 
     &__block {
         display: flex;
@@ -539,9 +539,26 @@
     }
 }
 
+.home-catalog-list {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 .game-slider {
     margin-top: 30px;
-    padding-bottom: 15px;
+    padding-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+
+    &__bg {
+        background: linear-gradient(180deg, #1C1B19 46.15%, #2B0F0A 100%);
+        width: 100%;
+        height: 700px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+    }
 
     &__block {
         width: 100%;
@@ -573,8 +590,9 @@
         .swiper-button-next,
         .swiper-button-prev {
             position: initial;
+            background-color: #282725;
             color: $text-dark;
-            border: 1px solid;
+            border: 1px solid transparent;
             border-radius: 4px;
             width: 50px;
             height: 36px;
@@ -586,7 +604,7 @@
             transition: 300ms ease;
 
             &:hover {
-                color: $orange;
+                border-color: $orange;
             }
         }
 
@@ -617,11 +635,14 @@
     }
 }
 
+.home-game-slider {
+    padding-bottom: 50px;
+}
+
 .home-statics {
-    margin-top: 40px;
     padding-bottom: 50px;
     background: rgb(26, 25, 23);
-    border-top: 2px solid #252221;
+    border-top: 1px solid #E16239;
     border-bottom: 2px solid #252221;
 
     &__title {
