--- a/src/partials/main-footer.html
+++ b/src/partials/main-footer.html
@@ -1,7 +1,6 @@
 <footer class="footer">
     <div class="container-fluid payment-footer">
         <div class="container">
-            <div class="payment-footer__title">Способы оплаты</div>
             <!-- Swiper -->
             <div class="swiper footerPaySwiper">
                 <div class="swiper-wrapper">
@@ -25,8 +24,7 @@
         <div class="footer__shape-1"></div>
         <div class="footer__shape-2"></div>
         <div class="footer__shape-3"></div>
-        <div class="footer__circle-1"></div>
-        <div class="footer__circle-2"></div>
+        <div class="footer__shape-4"></div>
 
         <div class="container-fluid advantages-footer">
             <div class="container">
