--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -635,73 +635,14 @@
     }
 }
 
-.home-game-slider {
+.home-slider-mb {
     padding-bottom: 50px;
 }
 
+/* Loop Block */
 .home-statics {
     padding-bottom: 50px;
     background: rgb(26, 25, 23);
-    position: relative;
-
-    &__title {
-        position: relative;
-        top: -30px;
-        width: max-content;
-        margin: auto;
-        display: flex;
-        text-align: center;
-        font-size: 20px;
-        font-weight: 500;
-        margin-bottom: 20px;
-        color: white;
-        overflow: hidden;
-        border-radius: 50px;
-        background: linear-gradient(175.53deg,
-                rgb(52, 45, 39) 0%,
-                rgb(34, 34, 32) 67.445%) padding-box,
-            linear-gradient(to top, #ffffff1a 4%, #FF6C3D) border-box;
-        border: 1px solid transparent;
-        backdrop-filter: blur(17.549999237060547px);
-
-        &_bg {
-            background: #22211E;
-            padding: 15px 50px;
-        }
-    }
-
-    &__bg {
-        position: absolute;
-        left: 50%;
-        bottom: -25px;
-        transform: translateX(-50%);
-        width: 400px;
-        height: 50px;
-        border-radius: 446px;
-        background: rgba(255, 108, 61, 0.59);
-        filter: blur(49.150001525878906px);
-    }
-
-    &__border_top {
-        width: 1920px;
-        height: 2px;
-        position: absolute;
-        z-index: -1;
-        top: -2px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: linear-gradient(90deg, rgba(123, 54, 31, 0.00) 0%, #E16239 50.42%, rgba(123, 54, 31, 0.00) 100%);
-    }
-
-    &__border_bottom {
-        width: 273px;
-        height: 1px;
-        background: linear-gradient(90deg, rgba(255, 108, 61, 0.00) 0%, #FF6C3D 51.23%, rgba(255, 108, 61, 0.00) 100%);
-        position: absolute;
-        bottom: 0px;
-        left: 50%;
-        transform: translateX(-50%);
-    }
 
     .statics-card {
 
@@ -739,29 +680,10 @@
     }
 }
 
-
-
 .home-markets {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 50px;
     background: rgb(26, 25, 23);
     position: relative;
-    overflow: hidden;
-    border-top: 2px solid #252221;
-
-    &::after {
-        content: "";
-        display: flex;
-        width: 250px;
-        height: 60px;
-        position: absolute;
-        left: 50%;
-        bottom: -40px;
-        transform: translateX(-50%);
-        filter: blur(70px);
-        background: rgb(255, 108, 61);
-        border-radius: 50%;
-    }
 
 
     &__title {
@@ -809,24 +731,13 @@
         }
     }
 
-    &__link {
-        display: none;
-    }
-
     .splide__slide.is-active {
-        .home-markets__link {
-            display: flex;
-        }
-
         .home-markets__img_item {
             filter: none;
         }
     }
 
     .swiper-slide-active {
-        .home-markets__link {
-            display: flex;
-        }
 
         .home-markets__img_item {
             filter: none;
@@ -838,6 +749,81 @@
         overflow: visible;
     }
 }
+
+.home-loop-block {
+    position: relative;
+
+    &__title {
+        position: relative;
+        top: -30px;
+        width: max-content;
+        margin: auto;
+        display: flex;
+        text-align: center;
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 20px;
+        color: white;
+        overflow: hidden;
+        border-radius: 50px;
+        background: linear-gradient(175.53deg,
+                rgb(52, 45, 39) 0%,
+                rgb(34, 34, 32) 67.445%) padding-box,
+            linear-gradient(to top, #ffffff1a 4%, #FF6C3D) border-box;
+        border: 1px solid transparent;
+        backdrop-filter: blur(17.549999237060547px);
+
+        &_bg {
+            background: #22211E;
+            padding: 15px 50px;
+        }
+    }
+
+    &__bg {
+        position: absolute;
+        left: 50%;
+        bottom: -25px;
+        transform: translateX(-50%);
+        width: 400px;
+        height: 50px;
+        border-radius: 446px;
+        background: rgba(255, 108, 61, 0.59);
+        filter: blur(49.150001525878906px);
+
+        &_block {
+            overflow: hidden;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 100px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+
+    &__border_top {
+        width: 1920px;
+        height: 2px;
+        position: absolute;
+        z-index: -1;
+        top: -2px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: linear-gradient(90deg, rgba(123, 54, 31, 0.00) 0%, #E16239 50.42%, rgba(123, 54, 31, 0.00) 100%);
+    }
+
+    &__border_bottom {
+        width: 273px;
+        height: 1px;
+        background: linear-gradient(90deg, rgba(255, 108, 61, 0.00) 0%, #FF6C3D 51.23%, rgba(255, 108, 61, 0.00) 100%);
+        position: absolute;
+        bottom: 0px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+/* Loop Block End */
 
 .pre-order-actions {
     display: flex;
@@ -1089,6 +1075,7 @@
 .home-reviews {
     padding-top: 40px;
     padding-bottom: 40px;
+    border-bottom: 1px solid $orange;
 
     &__title {
         text-align: center;
