--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -635,9 +635,7 @@
     }
 }
 
-.home-slider-mb {
-    padding-bottom: 50px;
-}
+
 
 /* Loop Block */
 .home-statics {
@@ -754,6 +752,7 @@
     position: relative;
 
     &__title {
+        line-height: 1.1;
         position: relative;
         top: -30px;
         width: max-content;
@@ -775,7 +774,12 @@
 
         &_bg {
             background: #22211E;
-            padding: 15px 50px;
+            padding: 10px 50px;
+            height: 63px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
         }
     }
 
@@ -795,7 +799,7 @@
             position: absolute;
             bottom: 0;
             width: 100%;
-            height: 100px;
+            height: 200px;
             left: 50%;
             transform: translateX(-50%);
         }
@@ -903,13 +907,8 @@
     background: rgb(26, 25, 23);
     padding-bottom: 40px;
 
-    &__block {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 30px;
-
-        margin-bottom: 30px;
+    .home-loop-block__title {
+        margin-bottom: 0;
     }
 
     &__title {
@@ -927,10 +926,9 @@
         &_secondary {
             font-size: 14px;
             font-weight: 400;
+            font-family: $font-roboto;
         }
     }
-
-    &__btn {}
 
     .splide__track {
         overflow: visible;
@@ -1072,15 +1070,27 @@
 }
 
 .home-reviews {
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 40px;
     border-bottom: 1px solid $orange;
+    position: relative;
+    overflow: hidden;
+
+    &__bg {
+        width: 100%;
+        height: 400px;
+        position: absolute;
+        left: 0;
+        top: -100px;
+        background: linear-gradient(0deg, #1C1B19 46.15%, #2B0F0A 100%);
+    }
 
     &__title {
         text-align: center;
         font-size: 20px;
         color: $text-dark;
         margin-bottom: 25px;
+        position: relative;
 
         &._secondary {
             margin-top: 80px;
@@ -1100,6 +1110,7 @@
 .home-reviews-card {
     display: flex;
     gap: 14px;
+    position: relative;
 
     &__name {
         width: 100%;
@@ -1228,4 +1239,12 @@
     top: 0;
     left: 0;
     background: linear-gradient(0deg, #1C1B19 46.15%, #2B0F0A 100%);
+}
+
+.home-slider-mb {
+    padding-bottom: 50px;
+}
+
+.home-slider-pt {
+    padding-top: 0;
 }
