--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -163,6 +163,34 @@
             height: 23px;
             display: flex;
             padding: 0;
+
+            &_static {
+                display: flex;
+            }
+
+            &_hover {
+                display: none;
+            }
+
+            &:hover {
+                .header__logo_menu_static {
+                    display: none;
+                }
+
+                .header__logo_menu_hover {
+                    display: flex;
+                }
+            }
+
+            &._active {
+                .header__logo_menu_static {
+                    display: none;
+                }
+
+                .header__logo_menu_hover {
+                    display: flex;
+                }
+            }
         }
     }
 
@@ -399,106 +427,72 @@
     }
 }
 
-
-.hamburger {
-    display: flex;
-    cursor: pointer;
-    transition-property: opacity, filter;
-    transition-duration: 0.15s;
-    transition-timing-function: linear;
-    font: inherit;
-    color: inherit;
-    text-transform: none;
-    background-color: transparent;
-    border: 0;
-    margin: 0;
-    overflow: visible;
-}
-
-.hamburger.is-active .hamburger-inner,
-.hamburger.is-active .hamburger-inner::before,
-.hamburger.is-active .hamburger-inner::after {
-    background-color: $orange;
-}
-
-.hamburger-box {
-    width: 30px;
-    height: 24px;
-    display: inline-block;
-    position: relative;
-}
-
-.hamburger-inner {
-    display: block;
-    top: 50%;
-    margin-top: -2px;
-}
-
-.hamburger-inner,
-.hamburger-inner::before,
-.hamburger-inner::after {
-    width: 30px;
-    height: 4px;
-    background-color: white;
-    border-radius: 4px;
-    position: absolute;
-    transition-property: transform;
-    transition-duration: 0.15s;
-    transition-timing-function: ease;
-}
-
-.hamburger-inner::before,
-.hamburger-inner::after {
-    content: "";
-    display: block;
-}
-
-.hamburger-inner::before {
-    width: 23px;
-    top: -8px;
-}
-
-.hamburger-inner::after {
-    bottom: -8px;
-    width: 26px;
-}
-
-.hamburger.is-active .hamburger-inner::after {
-    width: 30px;
-}
-
-
-
-/*
-   * Squeeze
-   */
-.hamburger--squeeze .hamburger-inner {
-    transition-duration: 0.075s;
-    transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-.hamburger--squeeze .hamburger-inner::before {
-    transition: top 0.075s 0.12s ease, opacity 0.075s ease;
-}
-
-.hamburger--squeeze .hamburger-inner::after {
-    transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-.hamburger--squeeze.is-active .hamburger-inner {
-    transform: rotate(45deg);
-    transition-delay: 0.12s;
-    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-
-.hamburger--squeeze.is-active .hamburger-inner::before {
-    top: 0;
+.js-hamburger-menu {
+    position: fixed;
+    z-index: 10;
+    top: 100px;
+    left: 0;
+    visibility: hidden;
+    transition: 300ms ease;
     opacity: 0;
-    transition: top 0.075s ease, opacity 0.075s 0.12s ease;
+    width: 100%;
+    border: 1px solid #522516;
+    background: rgba(28, 27, 25, 0.80);
+    backdrop-filter: blur(17.549999237060547px);
+    padding: 40px 0;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+    }
 }
 
-.hamburger--squeeze.is-active .hamburger-inner::after {
-    bottom: 0;
-    transform: rotate(-90deg);
-    transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
+.logo-menu {
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    &__title {
+        color: $text-dark;
+        font-size: 20px;
+    }
+
+    &__payment {
+        width: 100%;
+        max-width: 509px;
+
+        &_cards {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        &_card {
+            &_bg {}
+
+            &_img {}
+
+            &_content {}
+
+            &_title {}
+
+            &_subtitle {}
+
+            &_dis {
+                border-radius: 14px 0px;
+                border: 1px solid white;
+                background: white;
+                box-shadow: 0px 4px 28.9px 0px white;
+                backdrop-filter: blur(33.650001525878906px);
+            }
+        }
+    }
+
+    &__game {
+        width: 100%;
+    }
+
+
 }
