--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -13,21 +13,26 @@
         <div class="header__block">
             <div class="header__logo">
 
-                <!-- <button class="hamburger hamburger--squeeze js-hamburger header__logo_menu" type="button">
-                    <span class="hamburger-box">
-                        <span class="hamburger-inner"></span>
-                    </span>
-                </button> -->
-
-                <button class="header__logo_menu">
-                    <img src="assets/images/home-new/icons/menu.svg" alt="">
+                <button class="header__logo_menu js-hamburger">
+                    <svg class="header__logo_menu_static" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                        <path d="M8.71771 0.217773H1.82723C0.819634 0.217773 0 1.03741 0 2.045V8.93548C0 9.94307 0.819634 10.7627 1.82723 10.7627H8.71771C9.7253 10.7627 10.5449 9.94307 10.5449 8.93548V2.045C10.5448 1.03741 9.7253 0.217773 8.71771 0.217773Z" fill="#847F7D" />
+                        <path d="M22.1708 0.217773H15.2804C14.2728 0.217773 13.4531 1.03741 13.4531 2.045V8.93548C13.4531 9.94307 14.2728 10.7627 15.2804 10.7627H22.1708C23.1784 10.7627 23.9981 9.94307 23.9981 8.93548V2.045C23.9981 1.03741 23.1784 0.217773 22.1708 0.217773Z" fill="#847F7D" />
+                        <path d="M8.71771 13.6729H1.82723C0.819634 13.6729 0 14.4924 0 15.5V22.3905C0 23.3981 0.819634 24.2177 1.82723 24.2177H8.71771C9.7253 24.2177 10.5449 23.3981 10.5449 22.3905V15.5C10.5448 14.4924 9.7253 13.6729 8.71771 13.6729Z" fill="#847F7D" />
+                        <path d="M22.1708 13.6729H15.2804C14.2728 13.6729 13.4531 14.4925 13.4531 15.5001V22.3906C13.4531 23.3982 14.2728 24.2178 15.2804 24.2178H22.1708C23.1784 24.2177 23.9981 23.3981 23.9981 22.3905V15.5C23.9981 14.4924 23.1784 13.6729 22.1708 13.6729Z" fill="#847F7D" />
+                    </svg>
+                    <svg class="header__logo_menu_hover" xmlns="http://www.w3.org/2000/svg" width="26" height="25" viewBox="0 0 26 25" fill="none">
+                        <path d="M9.73333 0.209961H2.84285C1.83526 0.209961 1.01562 1.02959 1.01562 2.03719V8.92767C1.01562 9.93526 1.83526 10.7549 2.84285 10.7549H9.73333C10.7409 10.7549 11.5606 9.93526 11.5606 8.92767V2.03719C11.5604 1.02959 10.7409 0.209961 9.73333 0.209961Z" fill="#FF7347" />
+                        <path d="M24.7754 4.61453L20.6169 0.456068C20.0088 -0.152023 19.0195 -0.152023 18.4114 0.456068L14.2529 4.61453C13.6449 5.22263 13.6449 6.21194 14.2529 6.82003L18.4114 10.9785C19.0195 11.5866 20.0088 11.5866 20.6169 10.9785L24.7754 6.82003C25.3835 6.21194 25.3835 5.22263 24.7754 4.61453Z" fill="#FF7347" />
+                        <path d="M11.2363 17.8971L7.31158 13.9724C6.73768 13.3985 5.80403 13.3985 5.23012 13.9724L1.30543 17.8971C0.731523 18.471 0.731524 19.4047 1.30543 19.9786L5.23012 23.9033C5.80403 24.4772 6.73772 24.4772 7.31163 23.9033L11.2363 19.9786C11.8101 19.4046 11.8102 18.471 11.2363 17.8971Z" fill="#FF7347" />
+                        <path d="M23.1865 13.665H16.296C15.2884 13.665 14.4688 14.4847 14.4688 15.4923V22.3827C14.4688 23.3903 15.2884 24.21 16.296 24.21H23.1865C24.1941 24.2099 25.0137 23.3903 25.0137 22.3827V15.4922C25.0137 14.4846 24.1941 13.665 23.1865 13.665Z" fill="#FF7347" />
+                    </svg>
                 </button>
 
                 <a class="header__logo_link" href="#">
                     <img src="assets/images/icons/logo.svg" alt="">
                 </a>
             </div>
-            <div class="header__menu js-hamburger-menu">
+            <div class="header__menu">
                 <div class="header__menu_block">
                     <div class="header__menu_mobile">
                         <a href="#" class="header__actions_link">
@@ -132,3 +137,34 @@
         </div>
     </div>
 </header>
+
+<div class="js-hamburger-menu logo-menu active">
+    <div class="container">
+        <div class="logo-menu__block">
+            <div class="logo-menu__payment">
+                <div class="logo-menu__title">GameBis - Поможет!</div>
+                <div class="logo-menu__payment_cards">
+                    <div class="logo-menu__payment_card">
+                        <div class="logo-menu__payment_card_bg">
+                            <img src="assets/images/home-new/header-steam-bg.svg" alt="">
+                        </div>
+                        <div class="logo-menu__payment_card_img">
+                            <img class="logo-menu__payment_card_img_item" src="assets/images/home-new/header-steam-img.png">
+                        </div>
+                        <div class="logo-menu__payment_card_content">
+                            <div class="logo-menu__payment_card_title"></div>
+                            <div class="logo-menu__payment_card_subtitle"></div>
+                        </div>
+                        <div class="logo-menu__payment_card_dis">
+                            <span>5%</span>
+                        </div>
+                    </div>
+                    <div class="logo-menu__payment_card"></div>
+                </div>
+            </div>
+            <div class="logo-menu__game">
+                <div class="logo-menu__title">Вам повезет</div>
+            </div>
+        </div>
+    </div>
+</div>
