--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -470,7 +470,11 @@
         }
 
         &_card {
-            &_bg {}
+            position: relative;
+
+            &_bg {
+                position: absolute;
+            }
 
             &_img {}
 
