--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -144,18 +144,32 @@
             <div class="logo-menu__payment">
                 <div class="logo-menu__title">GameBis - Поможет!</div>
                 <div class="logo-menu__payment_cards">
-                    <div class="logo-menu__payment_card">
+                    <div class="logo-menu__payment_card _steam">
                         <div class="logo-menu__payment_card_bg">
-                            <img src="assets/images/home-new/header-steam-bg.svg" alt="">
+                            <img class="logo-menu__payment_card_bg_item" src="assets/images/home-new/header-steam-bg.svg" alt="">
                         </div>
                         <div class="logo-menu__payment_card_img">
                             <img class="logo-menu__payment_card_img_item" src="assets/images/home-new/header-steam-img.png">
                         </div>
                         <div class="logo-menu__payment_card_content">
-                            <div class="logo-menu__payment_card_title"></div>
-                            <div class="logo-menu__payment_card_subtitle"></div>
+                            <div class="logo-menu__payment_card_title">Пополнение кошелька</div>
+                            <div class="logo-menu__payment_card_logo">
+                                <span class="logo-menu__payment_card_logo_text">STEAM</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+                                    <g clip-path="url(#clip0_2402_33960)">
+                                        <path d="M11 0.257812C5.06726 0.257812 0.257812 5.06726 0.257812 11C0.257812 16.9327 5.06726 21.7422 11 21.7422C16.9327 21.7422 21.7422 16.9327 21.7422 11C21.7422 5.06726 16.9327 0.257812 11 0.257812ZM14.6649 12.166L11.033 14.7908C10.9012 16.2093 9.68804 17.3194 8.22662 17.3194C7.58464 17.3198 6.96162 17.1017 6.46005 16.701C5.95847 16.3003 5.60819 15.7408 5.46683 15.1146L3.55592 14.3553V10.8246L6.78477 12.1159C7.28866 11.8151 7.85469 11.6803 8.51353 11.7381L10.8702 8.39248C10.8857 6.34189 12.5796 4.68063 14.6572 4.68063C16.7464 4.68063 18.4403 6.36118 18.4441 8.41947C18.4441 10.493 16.7463 12.166 14.6649 12.166Z" fill="white" />
+                                        <path d="M8.22788 12.459C8.07659 12.4585 7.92574 12.4753 7.77826 12.5091L8.64266 12.856C8.84326 12.934 9.02637 13.0511 9.18138 13.2005C9.33638 13.3498 9.4602 13.5284 9.54565 13.726C9.6311 13.9235 9.67649 14.1361 9.67917 14.3513C9.68185 14.5666 9.64179 14.7802 9.56129 14.9798C9.47971 15.1807 9.35931 15.3635 9.20697 15.5178C9.05464 15.6721 8.87337 15.7948 8.67354 15.8789C8.47372 15.9631 8.25926 16.007 8.04244 16.0081C7.82563 16.0092 7.61072 15.9676 7.41002 15.8856C7.0728 15.7545 6.72784 15.6119 6.39062 15.4847C6.55976 15.8118 6.81295 16.0879 7.12415 16.2847C7.43535 16.4815 7.79335 16.5918 8.16133 16.6044C8.52932 16.617 8.89402 16.5314 9.21795 16.3563C9.54188 16.1813 9.81335 15.9231 10.0045 15.6084C10.1956 15.2937 10.2994 14.9338 10.3053 14.5656C10.3112 14.1974 10.219 13.8344 10.0381 13.5137C9.85718 13.193 9.59414 12.9262 9.276 12.7409C8.95785 12.5555 8.59608 12.4582 8.22788 12.459Z" fill="white" />
+                                        <path d="M14.6599 5.91406C13.2529 5.91406 12.1172 7.03959 12.1172 8.42344C12.1172 9.81489 13.2568 10.9328 14.6599 10.9328C16.0515 10.9367 17.1951 9.81502 17.191 8.42344C17.1911 7.03959 16.0515 5.91406 14.6599 5.91406ZM14.6541 9.93031C14.3567 9.92713 14.067 9.83604 13.8212 9.66852C13.5755 9.50099 13.3849 9.26452 13.2733 8.98886C13.1617 8.71321 13.1341 8.4107 13.1941 8.11942C13.2541 7.82814 13.3989 7.56111 13.6103 7.35196C13.8217 7.1428 14.0902 7.00086 14.3821 6.94401C14.674 6.88717 14.9762 6.91795 15.2507 7.03249C15.5251 7.14703 15.7595 7.3402 15.9244 7.58769C16.0893 7.83518 16.1773 8.12592 16.1773 8.42331C16.1766 8.62237 16.1366 8.81933 16.0596 9.0029C15.9826 9.18647 15.8701 9.35303 15.7286 9.49303C15.5871 9.63304 15.4193 9.74373 15.235 9.81877C15.0506 9.89381 14.8532 9.93171 14.6541 9.93031H14.6541Z" fill="white" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_2402_33960">
+                                            <rect width="22" height="22" fill="white" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
                         </div>
-                        <div class="logo-menu__payment_card_dis">
+                        <div class="logo-menu__payment_card_dis logo-menu__payment_card_dis-steam">
                             <span>5%</span>
                         </div>
                     </div>
