--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -457,6 +457,7 @@
     &__title {
         color: $text-dark;
         font-size: 20px;
+        margin-bottom: 35px;
     }
 
     &__payment {
@@ -471,25 +472,124 @@
 
         &_card {
             position: relative;
+            display: flex;
+            height: 145px;
+            gap: 0px;
+            background-color: #fff0;
+            border-radius: 15px;
+            border: 1px solid #2C465E;
+            transition: 300ms ease;
+
+            &._steam {
+                background-color: #1E2348;
+
+                &:hover {
+                    box-shadow: 0px 4px 28.9px 0px rgba(23, 20, 189, 0.69);
+                    background-color: #1C1F44;
+
+                    .logo-menu__payment_card_bg_item {
+                        filter: none;
+                    }
+
+                    .logo-menu__payment_card_img {
+                        transform: rotate(10deg);
+                    }
+                }
+            }
 
             &_bg {
                 position: absolute;
+                left: -1px;
+                top: -1px;
+                z-index: 0;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                border-radius: 15px;
+
+                &_item {
+                    width: 101%;
+                    height: 101%;
+                    object-fit: cover;
+                    filter: blur(1px);
+                }
             }
 
-            &_img {}
+            &_img {
+                width: 100%;
+                max-width: 196px;
+                position: relative;
+                top: -25px;
+                left: -30px;
+                z-index: 3;
+                transform: rotate(-10deg);
 
-            &_content {}
+                transition-duration: 0.3s;
+                transition-property: transform;
+                transform-origin: center center;
 
-            &_title {}
+                &_item {}
+            }
+
+            &_content {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                position: relative;
+                z-index: 2;
+            }
+
+            &_title {
+                font-size: 24px;
+                color: white;
+                font-weight: 700;
+                margin-top: 15px;
+            }
 
             &_subtitle {}
 
+            &_logo {
+                margin-top: 10px;
+                position: relative;
+                left: -100px;
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                gap: 5px;
+                border-radius: 20px;
+                border: 1px solid #2C465E;
+                background: #20294E;
+                padding: 8px 10px 8px 100px;
+                line-height: 1;
+                box-shadow: 0px 4px 28.9px 0px rgba(13, 25, 35, 0.69);
+                backdrop-filter: blur(33.650001525878906px);
+
+                &_text {
+                    font-size: 24px;
+                    font-weight: 700;
+                }
+            }
+
             &_dis {
+                position: absolute;
+                right: -1px;
+                bottom: -1px;
+                padding: 8px 20px;
+                line-height: 1;
                 border-radius: 14px 0px;
                 border: 1px solid white;
                 background: white;
+                font-weight: 700;
+                font-size: 24px;
                 box-shadow: 0px 4px 28.9px 0px white;
                 backdrop-filter: blur(33.650001525878906px);
+
+                &-steam {
+                    border-color: #2C465E;
+                    background: #20294E;
+                    box-shadow: 0px 4px 28.9px 0px rgba(13, 25, 35, 0.69);
+                }
             }
         }
     }
