--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -13,7 +13,7 @@
         <div class="header__block">
             <div class="header__logo">
 
-                <button class="header__logo_menu js-hamburger">
+                <button class="header__logo_menu js-hamburger _active">
                     <svg class="header__logo_menu_static" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
                         <path d="M8.71771 0.217773H1.82723C0.819634 0.217773 0 1.03741 0 2.045V8.93548C0 9.94307 0.819634 10.7627 1.82723 10.7627H8.71771C9.7253 10.7627 10.5449 9.94307 10.5449 8.93548V2.045C10.5448 1.03741 9.7253 0.217773 8.71771 0.217773Z" fill="#847F7D" />
                         <path d="M22.1708 0.217773H15.2804C14.2728 0.217773 13.4531 1.03741 13.4531 2.045V8.93548C13.4531 9.94307 14.2728 10.7627 15.2804 10.7627H22.1708C23.1784 10.7627 23.9981 9.94307 23.9981 8.93548V2.045C23.9981 1.03741 23.1784 0.217773 22.1708 0.217773Z" fill="#847F7D" />
@@ -168,12 +168,27 @@
                                     </defs>
                                 </svg>
                             </div>
+
                         </div>
-                        <div class="logo-menu__payment_card_dis logo-menu__payment_card_dis-steam">
+                        <div class="logo-menu__payment_card_dis _steam">
                             <span>5%</span>
                         </div>
                     </div>
-                    <div class="logo-menu__payment_card"></div>
+                    <div class="logo-menu__payment_card _boost">
+                        <div class="logo-menu__payment_card_bg">
+                            <img class="logo-menu__payment_card_bg_item" src="assets/images/home-new/header-boost-bg.png" alt="">
+                        </div>
+                        <div class="logo-menu__payment_card_img">
+                            <img class="logo-menu__payment_card_img_item" src="assets/images/home-new/header-boost-img.png">
+                        </div>
+                        <div class="logo-menu__payment_card_content">
+                            <div class="logo-menu__payment_card_title">Буст мобильных игр</div>
+                            <div class="logo-menu__payment_card_subtitle">Пополнение, ачивки, аккаунты, прокачка</div>
+                        </div>
+                        <div class="logo-menu__payment_card_dis _boost">
+                            <span>5%</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="logo-menu__game">
