--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -481,6 +481,7 @@
             transition: 300ms ease;
 
             &._steam {
+                z-index: 1;
                 background-color: #1E2348;
 
                 &:hover {
@@ -497,10 +498,55 @@
                 }
             }
 
+            &._boost {
+                z-index: 2;
+                border: 1px solid #FF8998;
+                background: #D05464;
+                box-shadow: 0px 4px 28.9px 0px #6B1E28;
+                backdrop-filter: blur(33.650001525878906px);
+
+                &::after {
+                    content: "";
+                    width: 100%;
+                    height: 100%;
+                    background-color: #d05464cf;
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    border-radius: 15px;
+                    transition: 300ms ease;
+                }
+
+                .logo-menu__payment_card_img {
+                    transform: none;
+                }
+
+                .logo-menu__payment_card_img_item {
+                    width: 250px;
+                    top: -20px;
+                }
+
+                &:hover {
+                    box-shadow: 0px 4px 28.9px 0px #D42B40;
+
+                    .logo-menu__payment_card_img {
+                        transform: translateX(20px);
+                    }
+
+                    .logo-menu__payment_card_content {
+                        transform: translateX(20px);
+                    }
+
+                    &::after {
+                        background-color: #d05464f2;
+                    }
+                }
+            }
+
             &_bg {
                 position: absolute;
-                left: -1px;
-                top: -1px;
+                left: 0;
+                top: 0;
                 z-index: 0;
                 width: 100%;
                 height: 100%;
@@ -538,6 +584,9 @@
                 align-items: flex-start;
                 position: relative;
                 z-index: 2;
+                transition-duration: 0.3s;
+                transition-property: transform;
+                transform-origin: center center;
             }
 
             &_title {
@@ -573,6 +622,7 @@
 
             &_dis {
                 position: absolute;
+                z-index: 3;
                 right: -1px;
                 bottom: -1px;
                 padding: 8px 20px;
@@ -585,10 +635,17 @@
                 box-shadow: 0px 4px 28.9px 0px white;
                 backdrop-filter: blur(33.650001525878906px);
 
-                &-steam {
+                &._steam {
                     border-color: #2C465E;
                     background: #20294E;
                     box-shadow: 0px 4px 28.9px 0px rgba(13, 25, 35, 0.69);
+                }
+
+                &._boost {
+                    border-color: #FF8998;
+                    background: #D05464;
+                    box-shadow: 0px 4px 28.9px 0px #6B1E28;
+                    backdrop-filter: blur(33.650001525878906px);
                 }
             }
         }
