--- a/src/partials/main-header.html
+++ b/src/partials/main-header.html
@@ -193,6 +193,71 @@
             </div>
             <div class="logo-menu__game">
                 <div class="logo-menu__title">Вам повезет</div>
+                <div class="logo-menu__game_block">
+                    <div class="logo-menu__game_card">
+                        <img class="logo-menu__game_img" src="assets/images/home-new/header-game-img.png">
+                        <div class="logo-menu__game_content">
+                            <div class="logo-menu__game_title">Игра “Вам повезет”</div>
+                            <div class="logo-menu__game_text">Выберите 3 ячейки, если 2 ячейки будут совпадать то вы автоматически получаете данную скидку из выигранного на покупку любой игры из нашего каталога. Удачи!</div>
+                        </div>
+                    </div>
+                    <div class="logo-menu__game_items">
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-1.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-2.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-3.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-4.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-5.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-6.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-7.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-8.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="logo-menu__game_item">
+                            <img class="logo-menu__game_item_img" src="assets/images/home-new/game-9.png" alt="">
+                            <button class="logo-menu__game_item_overlay js-header-game-open">
+                                <img class="logo-menu__game_item_overlay_img" src="assets/images/home-new/game-overlay.svg" alt="">
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
