--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -653,6 +653,105 @@
 
     &__game {
         width: 100%;
+
+        &_block {
+            border-radius: 14px;
+            background: #0D1117;
+            box-shadow: 0px 4px 28.9px 0px rgba(13, 25, 35, 0.69);
+            backdrop-filter: blur(33.650001525878906px);
+            padding: 28px;
+        }
+
+        &_card {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+
+        &_img {
+            width: 100%;
+            max-width: 170px;
+        }
+
+        &_title {
+            font-size: 24px;
+            font-weight: 700;
+        }
+
+        &_text {
+            background: var(--Linear, linear-gradient(180deg, #F3B454 0%, #F36754 100%));
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        &_items {
+            margin-top: 18px;
+            display: grid;
+            gap: 8px 5px;
+            grid-template-columns: repeat(5, 1fr);
+        }
+
+        &_item {
+            width: 100%;
+            height: 50px;
+            border-radius: 10px;
+            background: radial-gradient(50% 50% at 50% 50%, rgba(198, 198, 198, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), #20242C;
+            box-shadow: 0px 4px 28.9px 0px rgba(13, 25, 35, 0.69);
+            backdrop-filter: blur(33.650001525878906px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+
+            &_img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                padding: 8px;
+
+                border: 1px solid var(--Linear, #F3B454);
+                border-radius: 12px;
+            }
+
+            &_overlay {
+                display: flex;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                padding: 10px;
+                border: 1px solid #20242C;
+                border-radius: 10px;
+                background: #20242C;
+                transition: 300ms ease;
+                box-shadow: 0px 4px 28.9px 0px rgba(13, 25, 35, 0.69);
+                backdrop-filter: blur(33.650001525878906px);
+
+                &_img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                    filter: grayscale(1) brightness(0.6);
+                }
+
+                &:hover {
+                    border-radius: 10px;
+                    border: 1px solid #3D434F;
+                    background: #20242C;
+                    box-shadow: 0px 4px 28.9px 0px rgba(13, 25, 35, 0.69);
+                    backdrop-filter: blur(33.650001525878906px);
+
+                    .logo-menu__game_item_overlay_img {
+                        filter: none;
+                    }
+                }
+
+                &.remove {
+                    visibility: hidden;
+                    opacity: 0;
+                }
+            }
+        }
     }
 
 
