--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -405,6 +405,7 @@
         justify-content: flex-end;
         gap: 10px;
         width: 20%;
+        position: relative;
 
         &_block {
             display: flex;
@@ -455,9 +456,88 @@
             background: lightgray 50% / cover no-repeat;
             overflow: hidden;
             margin-left: 10px;
+            padding: 0;
+
+            &:focus {
+                border: 2px solid #44403E;
+            }
 
             &:hover {
                 border-color: $orange;
+            }
+
+            &_drop {
+                position: absolute;
+                top: calc(100% + 10px);
+                right: 0;
+                border-radius: 0px 0px 20px 20px;
+                border: 1px solid #522516;
+                background: rgba(28, 27, 25, 0.80);
+                backdrop-filter: blur(20px);
+                display: flex;
+                flex-direction: column;
+                gap: 12px;
+                padding: 18px;
+                width: 300px;
+                visibility: hidden;
+                opacity: 0;
+                transition: 300ms ease;
+
+                &._active {
+                    visibility: visible;
+                    opacity: 1;
+                }
+            }
+
+            &_item {
+                width: 100%;
+                border-radius: 12px;
+                padding: 14px;
+                background: linear-gradient(270deg, rgba(79, 79, 79, 0.35) 0%, rgba(72, 60, 54, 0.35) 31.28%, rgba(70, 66, 63, 0.35) 48.78%, rgba(72, 60, 54, 0.35) 70.71%, rgba(79, 79, 79, 0.35) 100%);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: relative;
+
+                svg path {
+                    transition: 300ms ease;
+                }
+
+                &:hover {
+                    color: white;
+
+                    svg path {
+                        fill: $orange;
+                    }
+                }
+
+                &._exit {
+                    border-radius: 12px;
+                    background: #42312A;
+                    padding: 10px;
+
+                    &:hover {
+                        background: $orange;
+                        color: black;
+
+                        svg path {
+                            fill: black;
+                        }
+                    }
+                }
+            }
+
+            &_svg {
+                position: absolute;
+                left: 14px;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+
+            &_link {}
+
+            &._active {
+                border: 2px solid $orange;
             }
         }
     }
@@ -466,7 +546,7 @@
 .js-hamburger-menu {
     position: fixed;
     z-index: 10;
-    top: 100px;
+    top: 63px;
     left: 0;
     visibility: hidden;
     transition: 300ms ease;
